--- a/index.html
+++ b/index.html
@@ -1,6 +1,90 @@
-<head >
+<html lang="pt-BR">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projeto HTML-1</title>
+    </head>
     <body>
-        <h1>aaaaaaaaaa</h1>
+        <h1>Tags básicas <i>HTML</i></h1>
+        <hr />
+
+        <h2 id="indice">Índice:</h2>
+        <ul>
+            <li><a href="#estrutura">Tags de estrutura</a></li>
+            <li><a href="#titulos">Tags de títulos</a></li>
+            <li><a href="#listas">Tags de listas</a></li>
+            <li><a href="#destaque">Tags de destaque</a></li>
+        </ul>
+        <hr />
+        <h2 id="estrutura">Tags de estrutura</h2>
+        <p>Tags de estrutura são o que compõe o minimo para o funcionamento da página HTML, por exemplo:
+            <br />
+            <strong><i>&lt;head&gt;</i></strong>: onde ficam as informações da página, como título, charset, links para arquivos externos, etc.
+            <br />
+            <strong><i>&lt;body&gt;</i></strong>: onde fica o conteúdo visível da página, como textos, imagens, links, etc.
+            <br />
+            Todas as tags devem ser abertas e fechadas corretamente para garantir o funcionamento da página, utilizando o sinal de menor que (<) para abrir e maior que (>) para fechar.
+            <br />
+            <small><a href="#indice">(Voltar)</a></small>
+            <br />
+            <hr />
+        <h2 id="titulos">Tags de títulos</h2>
+        <p>As tags de títulos são utilizadas para definir a hierarquia dos títulos na página, indo do mais importante (<strong><i>h1</i></strong>) ao menos importante (<strong><i>h6</i></strong>).
+            <br />
+            Exemplo:
+            <br />
+            <strong><i>&lt;h1&gt;Título 1&lt;/h1&gt;</i></strong>
+            <br />
+            <strong><i>&lt;h2&gt;Título 2&lt;/h2&gt;</i></strong>
+            <br />
+            <strong><i>&lt;h3&gt;Título 3&lt;/h3&gt;</i></strong>
+            <br />
+            <small><a href="#indice">(Voltar)</a></small>
+            <br />
+            <hr />
+        </p>
+        <h2 id="listas">Tags de listas</h2>
+        <p>As tags de listas são utilizadas para criar listas ordenadas (<strong><i>ol</i></strong>) e não ordenadas (<strong><i>ul</i></strong>), com itens representados pela tag <strong><i>li</i></strong>.
+            <br />
+            Exemplo de lista ordenada:
+            <br />
+            <strong><i>&lt;ol&gt;</i></strong>
+            <br />
+            <strong><i>&nbsp;&nbsp;&lt;li&gt;Item 1&lt;/li&gt;</i></strong>
+            <br />
+            <strong><i>&nbsp;&nbsp;&lt;li&gt;Item 2&lt;/li&gt;</i></strong>
+            <br />
+            <strong><i>&lt;/ol&gt;</i></strong>
+            <br />
+            Exemplo de lista não ordenada:
+            <br />
+            <strong><i>&lt;ul&gt;</i></strong>
+            <br />
+            <strong><i>&nbsp;&nbsp;&lt;li&gt;Item A&lt;/li&gt;</i></strong>
+            <br />
+            <strong><i>&nbsp;&nbsp;&lt;li&gt;Item B&lt;/li&gt;</i></strong>
+            <br />
+            <strong><i>&lt;/ul&gt;</i></strong>
+            <br />
+            <small><a href="#indice">(Voltar)</a></small>
+            <br />
+            <hr />
+        <h2 id="destaque">Tags de destaque</h2>
+        <p>As tags de destaque são utilizadas para enfatizar partes do texto, como negrito (<strong><i>strong</i></strong>), itálico (<strong><i>em</i></strong>) e sublinhado (<strong><i>u</i></strong>).
+            <br />
+            Exemplo:
+            <br />
+            <strong><i>&lt;strong&gt;Texto em negrito&lt;/strong&gt;</i></strong>
+            <br />
+            <strong><i>&lt;i&gt;Texto em itálico&lt;/i&gt;</i></strong>
+            <br />
+            <strong><i>&lt;u&gt;Texto sublinhado&lt;/u&gt;</i></strong>
+            <br />
+            <small><a href="#indice">(Voltar)</a></small>
+            <hr />
+            <br />
+            <h2>Referências</h2>
+            <h3>Eu mesmo</h3>
+            <p>Segue lá: <a href="https://youtube.com/@ghostavo" target="_blank">Canal do Ghostavo</a></p>
     </body>
-</head>
